--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "loopback-datasource-juggler": "^2.39.0",
     "passport": "^0.3.2",
     "serve-favicon": "^2.0.1",
-    "cfenv":",
+    "cfenv":"",
     "loopback-connector-couch":""
   },
   "repository": {
